--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     }
 
     .logo {
-      margin-bottom: px;
+      margin-bottom: 20px;
     }
 
     .logo img {
-      max-width: 500px;
+      max-width: 200px;
       height: auto;
     }
 
@@ -97,4 +97,5 @@
   </div>
 </body>
 </html>
+
 
